# test-ants

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  build-wasm.sh  serve-wasm.sh
.github/workflows/: deploy-pages.yml  simulation-tests.yml
assets/maps/: colony.ldtk
docs/: ANT_BEHAVIOR_PATTERNS.md  ARCHITECTURE.md  ASEPRITE_SPRITE_PLAN.md  AUDIT_REPORT.md  GAME_DESIGN_DOCUMENT.md  IMPLEMENTATION_PLAN.md  NEST_AI_AND_NAVIGATION.md  OVERWORLD_NAVIGATION_OPTIONS.md  SIMULATION_PR_REVIEW_CHECKLIST.md  SIMULATION_TESTING_WORK_PLAN.md  SIMULATION_TEST_CHARTER.md  queen-revamp.md  tdtk-editor.md  tdtk-integration.md
scripts/: add_ldtk_entities.py  gen_tilesets.py  update_ldtk.py
src/: main.rs
src/components/: ant.rs  map.rs  mod.rs  nest.rs  pheromone.rs  terrain.rs
src/plugins/: ai_log.rs  ant_ai.rs  ant_sprites.rs  camera.rs  combat.rs  egui_ui.rs  environment.rs  ldtk_maps.rs  mod.rs  nest.rs  nest_ai.rs  nest_navigation.rs  nest_pheromone.rs  pheromone.rs  player.rs  queen_ai.rs  simulation.rs  spider_ai.rs  steering.rs  terrain.rs  tiled_maps.rs
src/resources/: active_map.rs  colony.rs  mod.rs  nest.rs  nest_pathfinding.rs  nest_pheromone.rs  pheromone.rs  simulation.rs  spatial_grid.rs  surface_grid.rs
src/sim_core/: ai_log.rs  ant_logic.rs  clock.rs  job_assignment.rs  mod.rs  nest_scoring.rs  nest_stimuli.rs  nest_transitions.rs  queen_scoring.rs  regressions.rs  rng.rs  (+3 more)
tools/: generate_antlion_spritesheet.py  generate_food_spritesheet.py  generate_nest_spritesheet.py  generate_spider_spritesheet.py  generate_spritesheet.py
web/: index.html
(+20 files in other folders)
