[package]
name = "colony"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
bevy_ecs_ldtk = "0.14"
bevy_ecs_tilemap = "0.18"
bevy_egui = "0.39"
rand = "0.8"
serde_json = "1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Enable dynamic linking for fast dev compiles (do NOT use for release builds)
[features]
dev = ["bevy/dynamic_linking"]

# Optimize dependencies in dev for playable framerates
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "thin"
